--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "esm": "^3.2.25",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.15",
     "node-cron": "^3.0.3",
