--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start",
     "lint": "next lint",
     "test-db": "node testConnection.js",
     "sync-models": "node models/syncModels.js"
@@ -15,7 +15,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "esm": "^3.2.25",
+    "cookie": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "next": "14.2.15",
